# kilo7

./: .gitattributes  .gitignore  README.md  kilo7-backend.env
.github/: copilot-instructions.md
1.2/: PARTS.md  STEP_1_2_OS_HARDENING.md  step_1_2_os_hardening.sh
backend/: READ_ME.md
backend/kilo7_backend_clean_install_pack_2026-01-16/kilo7_backend_final/robot/ros_ws/src/kilo_core/: colcon.pkg  package.xml  setup.cfg
backend/kilo7_backend_clean_install_pack_2026-01-16/kilo7_backend_final/robot/ros_ws/src/kilo_core/config/: kilo.yaml
backend/kilo7_backend_clean_install_pack_2026-01-16/kilo7_backend_final/robot/ros_ws/src/kilo_core/kilo_core/: mqtt_bridge.py  safety_gate.py
backend/kilo7_backend_clean_install_pack_2026-01-16/kilo7_backend_final/robot/ros_ws/src/kilo_core/systemd/: kilo7-backend.env  kilo7-relay-kill.service  kilo7-safety-gate.service
docs/: AUTHORITY_CHAIN.md  BUILD_HEADERS.md  BUILD_INSTRUCTIONS.md  BUILD_LOG.md  BUILD_PLAN.md  CHANGELOG.md  CHECKLIST_SAF_007.md  DECISIONS_LEDGER.md  FLASH_DRIVE_SETUP.md  INTERFACE_CONTRACT.md  LESSONS_LEARNED.md  NEW_MACHINE.md  PARTS_LIST.md  PROJECT_CHARTER.md  PROJECT_PATH.md  PROJECT_STATE.md  SAFETY_GATE.md  STEP_1_7_IDIOT_PROOF.md  VISUALIZER.md
phone/: README.md
robot/: README.md  test_phase3_perception_summary.py  test_phase3_perception_validity.py  test_phase4_enforcement_wiring.py  test_phase4_safety_model.py  test_phase5_mapping_summary.py  test_phase6_navigation_summary.py  test_phase7_docking_summary.py  test_step_1_6_invariants.py  test_step_1_8_ui_truth.py  test_step_2_3_imu_stale.py  (+2 more)
(+93 files in other folders)
