<?xml version="1.0"?>
<package format="3">
  <name>kilo_core</name>
  <version>0.2.0</version>
  <description>KILO7 core backend nodes (MQTT bridge, safety gate, control PWM, relay kill)</description>
  <maintainer email="">theholybull</maintainer>
  <license></license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
